--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ onclick="setColorPreference('blue')">Blue</button>
  <div id="visitCount"></div>
  <table>
     
-        <h2>Ivy Information</h2>
+        <h2>Brian Information</h2>
     <table>
       <tr>
         <th>Name</th>
@@ -51,7 +51,7 @@ onclick="setColorPreference('blue')">Blue</button>
         <td id="2">SCT222-0124/2019</td>
         <td id="3">
           <img
-            src="c:\Users\user\Desktop\cup\mee.jpg"
+            src="C:\Users\user\Desktop\cup\GitHub Projects\Power1\mee.jpg"
             alt="image"
             width="80"
             height="80"
